# chessEngine

./: .gitignore  CMakeLists.txt
src/board/: position.cpp  position.hpp
src/core/: bitboard.cpp  bitboard.hpp  types.hpp  zobrist.cpp  zobrist.hpp
